添加i18n国际化&增加token失效处理

--- a/src/styles/MyHeader.module.css
+++ b/src/styles/MyHeader.module.css
@@ -5,3 +5,9 @@
 .avatar-btn {
     height: 52px !important;
 }
+
+.locale {
+    font-size: 20px;
+    margin-right: 0px;
+    color: rgba(0, 0, 0, 0.85) !important;
+}
