--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -5,3 +5,12 @@
 .login-btn {
     width: 100%;
 }
+
+.language-btn {
+    float: right;
+}
+
+.language-logo {
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.85) !important;
+}
